--- a/hardware/accelerometer.cfg
+++ b/hardware/accelerometer.cfg
@@ -1,8 +1,14 @@
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
 
+[mcu adxl]
+serial: /dev/serial/by-id/usb-Klipper_rp2040_E6609103C3806223-if00
+
 [adxl345]
-cs_pin: rpi:None
+#cs_pin: rpi:None
+cs_pin: adxl:gpio1
+spi_bus: adxl:spi0a
+axes_map: x,z,y
 
 [resonance_tester]
 accel_chip: adxl345
@@ -10,14 +16,15 @@ probe_points:
     0, 0, 20  # an example
 max_smoothing: 0.25  # an example
 
+
+# ACCEROMETRE_QUERY
+
 #[input_shaper]
 #shaper_freq_x: 40.4
 #shaper_type_x: zv
 #shaper_freq_y: 40.4
 #shaper_type_y: zv
 
-[printer]
-max_accel: 6400
 
 
 # For Delta printers with the default tower placement (tower A ~= 210 degrees, B ~= 330 degrees, and C ~= 90 degrees), execute
