--- a/hardware/printer.cfg
+++ b/hardware/printer.cfg
@@ -1,6 +1,7 @@
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_same54p20a_CDDDA25B484633532020204E281418FF-if00
 
+
 [printer]
 kinematics: delta
 max_velocity: 500
@@ -8,6 +9,7 @@ max_velocity: 500
 max_z_velocity: 200
 minimum_z_position: -2
 #delta_radius: 234.604366
+max_accel: 6400
 
 [temperature_sensor raspberry_pi]
 sensor_type: temperature_host
