--- a/hardware/accelerometer.cfg
+++ b/hardware/accelerometer.cfg
@@ -7,7 +7,7 @@ serial: /dev/serial/by-id/usb-Klipper_rp2040_E6609103C3806223-if00
 [adxl345]
 #cs_pin: rpi:None
 cs_pin: adxl:gpio1
-spi_bus: adxl:spi0a
+spi_bus: spi0a
 axes_map: x,z,y
 
 [resonance_tester]
